# town

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  retro_log.md
assets/LiberatedPixelCup/: .gitignore  README.md
assets/LiberatedPixelCup/sprite/derivative/: authors.md
assets/LiberatedPixelCup/sprite/original/: authors.md
assets/LiberatedPixelCup/tileset/derivative/: authors.md
assets/LiberatedPixelCup/tileset/derivative/vendors_table/: sources.md
assets/LiberatedPixelCup/tileset/original/: authors.md
docs/: gap_analysis.md
scripts/: build.ps1
src/: bank.h  camera.h  company.h  economy.cpp  economy.h  factory.h  farm.h  main.cpp  marketplace.h  render_charts.cpp  render_charts.h  render_map.cpp  render_map.h  render_ui.cpp  render_ui.h  sprites.h  terrain.h  town_map.h  ui_popup.cpp  ui_popup.h  water.h
